--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "test": "tests"
   },
   "scripts": {
-  "test": "npx playwright test",
-  "test:report": "npx playwright show-report"
+    "test": "npx playwright test",
+    "test:report": "npx playwright show-report"
   },
   "repository": {
     "type": "git",
@@ -18,6 +18,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@faker-js/faker": "^9.8.0",
     "@playwright/test": "^1.52.0",
     "playwright": "^1.52.0"
   },
