--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   },
   "scripts": {
     "test": "npx playwright test",
-    "test:report": "npx playwright show-report"
+    "test:report": "npx playwright show-report",
+    "lighthouse": "node utils/lighthouseHelper.js"
   },
   "repository": {
     "type": "git",
@@ -21,6 +22,8 @@
   "devDependencies": {
     "@faker-js/faker": "^9.8.0",
     "@playwright/test": "^1.52.0",
+    "chrome-launcher": "^1.2.0",
+    "lighthouse": "^12.6.1",
     "playwright": "^1.52.0"
   },
   "dependencies": {
